// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/flex/demo/align.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-start g-flex-gap-medium g-flex-vertical"
>
  <p>
    Select justify :
  </p>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="g-segmented css-var-test-id"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="g-segmented-group"
    >
      <label
        class="g-segmented-item g-segmented-item-selected"
      >
        <input
          checked=""
          class="g-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="g-segmented-item-label"
          title="flex-start"
        >
          flex-start
        </div>
      </label>
      <label
        class="g-segmented-item"
      >
        <input
          class="g-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="g-segmented-item-label"
          title="center"
        >
          center
        </div>
      </label>
      <label
        class="g-segmented-item"
      >
        <input
          class="g-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="g-segmented-item-label"
          title="flex-end"
        >
          flex-end
        </div>
      </label>
      <label
        class="g-segmented-item"
      >
        <input
          class="g-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="g-segmented-item-label"
          title="space-between"
        >
          space-between
        </div>
      </label>
      <label
        class="g-segmented-item"
      >
        <input
          class="g-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="g-segmented-item-label"
          title="space-around"
        >
          space-around
        </div>
      </label>
      <label
        class="g-segmented-item"
      >
        <input
          class="g-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="g-segmented-item-label"
          title="space-evenly"
        >
          space-evenly
        </div>
      </label>
    </div>
  </div>
  <p>
    Select align :
  </p>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="g-segmented css-var-test-id"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="g-segmented-group"
    >
      <label
        class="g-segmented-item g-segmented-item-selected"
      >
        <input
          checked=""
          class="g-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="g-segmented-item-label"
          title="flex-start"
        >
          flex-start
        </div>
      </label>
      <label
        class="g-segmented-item"
      >
        <input
          class="g-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="g-segmented-item-label"
          title="center"
        >
          center
        </div>
      </label>
      <label
        class="g-segmented-item"
      >
        <input
          class="g-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="g-segmented-item-label"
          title="flex-end"
        >
          flex-end
        </div>
      </label>
    </div>
  </div>
  <div
    class="g-flex css-var-test-id g-flex-align-flex-start g-flex-justify-flex-start"
    style="width: 100%; height: 120px; border-radius: 6px; border: 1px solid rgb(64, 169, 255);"
  >
    <button
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/flex/demo/align.tsx extend context correctly 2`] = `[]`;

exports[`renders components/flex/demo/basic.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-wrapper g-radio-wrapper-checked css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target g-radio-checked"
      >
        <input
          checked=""
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="horizontal"
        />
      </span>
      <span
        class="g-radio-label"
      >
        horizontal
      </span>
    </label>
    <label
      class="g-radio-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="vertical"
        />
      </span>
      <span
        class="g-radio-label"
      >
        vertical
      </span>
    </label>
  </div>
  <div
    class="g-flex css-var-test-id"
  >
    <div
      style="width: 25%; height: 54px; background-color: rgba(22, 119, 255, 0.75);"
    />
    <div
      style="width: 25%; height: 54px; background-color: rgb(22, 119, 255);"
    />
    <div
      style="width: 25%; height: 54px; background-color: rgba(22, 119, 255, 0.75);"
    />
    <div
      style="width: 25%; height: 54px; background-color: rgb(22, 119, 255);"
    />
  </div>
</div>
`;

exports[`renders components/flex/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/flex/demo/combination.tsx extend context correctly 1`] = `
<div
  class="g-card g-card-bordered g-card-hoverable css-var-test-id"
  style="width: 620px;"
>
  <div
    class="g-card-body"
    style="padding: 0px; overflow: hidden;"
  >
    <div
      class="g-flex css-var-test-id g-flex-justify-space-between"
    >
      <img
        alt="avatar"
        draggable="false"
        src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
        style="display: block; width: 273px;"
      />
      <div
        class="g-flex css-var-test-id g-flex-align-flex-end g-flex-justify-space-between g-flex-vertical"
        style="padding: 32px;"
      >
        <h3
          class="g-typography css-var-test-id"
        >
          “antd is an enterprise-class UI design language and React UI library.”
        </h3>
        <a
          aria-disabled="false"
          class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
          href="https://ant.design"
          tabindex="0"
          target="_blank"
        >
          <span>
            Get Started
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/flex/demo/combination.tsx extend context correctly 2`] = `[]`;

exports[`renders components/flex/demo/debug.tsx extend context correctly 1`] = `
Array [
  <div
    class="g-flex css-var-test-id g-flex-align-stretch g-flex-vertical"
  >
    <div
      style="height: 60px; background-color: rgba(22, 119, 255, 0.75);"
    />
    <div
      style="height: 60px; background-color: rgb(22, 119, 255);"
    />
    <div
      style="height: 60px; background-color: rgba(22, 119, 255, 0.75);"
    />
    <div
      style="height: 60px; background-color: rgb(22, 119, 255);"
    />
  </div>,
  <div
    class="g-flex css-var-test-id"
    style="margin-top: 20px;"
  >
    <div
      style="width: 25%; height: 40px; background-color: rgba(22, 119, 255, 0.75);"
    />
    <div
      style="width: 25%; height: 60px; background-color: rgb(22, 119, 255);"
    />
    <div
      style="width: 25%; height: 40px; background-color: rgba(22, 119, 255, 0.75);"
    />
    <div
      style="width: 25%; height: 60px; background-color: rgb(22, 119, 255);"
    />
  </div>,
]
`;

exports[`renders components/flex/demo/debug.tsx extend context correctly 2`] = `[]`;

exports[`renders components/flex/demo/gap.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
    role="radiogroup"
  >
    <label
      class="g-radio-wrapper g-radio-wrapper-checked css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target g-radio-checked"
      >
        <input
          checked=""
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="small"
        />
      </span>
      <span
        class="g-radio-label"
      >
        small
      </span>
    </label>
    <label
      class="g-radio-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="medium"
        />
      </span>
      <span
        class="g-radio-label"
      >
        medium
      </span>
    </label>
    <label
      class="g-radio-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="large"
        />
      </span>
      <span
        class="g-radio-label"
      >
        large
      </span>
    </label>
    <label
      class="g-radio-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio g-wave-target"
      >
        <input
          class="g-radio-input"
          name="test-id"
          type="radio"
          value="customize"
        />
      </span>
      <span
        class="g-radio-label"
      >
        customize
      </span>
    </label>
  </div>
  <div
    class="g-flex css-var-test-id g-flex-gap-small"
  >
    <button
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      type="button"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="g-btn css-var-test-id g-btn-dashed g-btn-color-default g-btn-varig-dashed"
      type="button"
    >
      <span>
        Dashed
      </span>
    </button>
    <button
      class="g-btn css-var-test-id g-btn-link g-btn-color-link g-btn-varig-link"
      type="button"
    >
      <span>
        Link
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/flex/demo/gap.tsx extend context correctly 2`] = `[]`;

exports[`renders components/flex/demo/wrap.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-wrap-wrap g-flex-gap-small"
>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</div>
`;

exports[`renders components/flex/demo/wrap.tsx extend context correctly 2`] = `[]`;
